@@ -1,0 +1,6 @@
+import FWCore.ParameterSet.Config as cms
+
+ISpyEEDigi = cms.EDAnalyzer('ISpyEEDigi',
+                            iSpyEEDigiTag = cms.InputTag('simEcalDigis:eeDigis'),
+                            iSpyEERecHitTag = cms.InputTag('ecalRecHit:EcalRecHitsEE')
+                           )
